--- a/task_manager/tasks/templates/tasks/task_detail.html
+++ b/task_manager/tasks/templates/tasks/task_detail.html
@@ -61,6 +61,14 @@
             <nav class="mt-3">
                 <a href="{% url 'tasks:task_update' task.pk %}" class="btn btn-outline-primary">編集</a>
                 <a href="{% url 'tasks:task_delete' task.pk %}" class="btn btn-outline-danger">削除</a>
+                <a href="{% url 'tasks:task_create_child' task.pk %}" class="btn btn-outline-primary">子タスクを追加</a>
+
+                {% if task.parent %}
+                <a href="{% url 'tasks:task_detail' task.parent.pk %}" class="btn btn-outline-secondary">
+                    親タスクへ戻る: {{ task.parent.title }}
+                </a>
+                {% endif %}
+
                 <a href="{% url 'tasks:task_list' %}" class="btn btn-outline-secondary">一覧へ戻る</a>
 
                 {% if not task.is_completed %}
@@ -74,7 +82,6 @@
                         </form>
                     {% endif %}
                 {% endif %}
-
 
             </nav>
         </div>
